--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,6 +83,11 @@
         <item>Milliliter (ml)</item>
     </string-array>
 
+    <string-array name="bodyweight_units_array">
+        <item>KiloGrams (kg)</item>
+        <item>Pounds (lbs)</item>
+    </string-array>
+
     <string-array name="height_units_array">
         <item>feet/inches</item>
         <item>cm</item>
@@ -92,6 +97,14 @@
         <item>Lose</item>
         <item>Maintain</item>
         <item>Gain</item>
+    </string-array>
+
+    <string-array name="workfreq_array">
+        <item>Little or no exercise</item>
+        <item>Light (1-3 times/week)</item>
+        <item>Moderate (3-5 days/week)</item>
+        <item>Active (6-7 days/week)</item>
+        <item>Heavy (job or twice a day)</item>
     </string-array>
 
 </resources>
