Updated Macro Settings
*Edit mode added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,7 +83,7 @@
     </string-array>
 
     <string-array name="bodyweight_units_array">
-        <item>KiloGrams (kg)</item>
+        <item>Kilograms (kg)</item>
         <item>Pounds (lbs)</item>
     </string-array>
 
@@ -93,17 +93,17 @@
     </string-array>
 
     <string-array name="goals_array">
-        <item>Lose</item>
-        <item>Maintain</item>
-        <item>Gain</item>
+        <item>Fat Loss</item>
+        <item>Maintenance</item>
+        <item>Muscle Gain</item>
     </string-array>
 
     <string-array name="workfreq_array">
-        <item>Little or no exercise</item>
-        <item>Light (1-3 times/week)</item>
-        <item>Moderate (3-5 days/week)</item>
-        <item>Active (6-7 days/week)</item>
-        <item>Heavy (job or twice a day)</item>
+        <item>None (Little or no exercise)</item>
+        <item>Low (1-3 times/week)</item>
+        <item>Medium (3-5 days/week)</item>
+        <item>High (6-7 days/week)</item>
+        <item>Very High (physical job or 7+ times/week)</item>
     </string-array>
 
 </resources>
