--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -99,11 +99,11 @@
     </string-array>
 
     <string-array name="workfreq_array">
-        <item>Little or no exercise</item>
-        <item>Light (1-3 times/week)</item>
-        <item>Moderate (3-5 days/week)</item>
-        <item>Active (6-7 days/week)</item>
-        <item>Heavy (job or twice a day)</item>
+        <item>None (Little or no exercise)</item>
+        <item>Low (1-3 times/week)</item>
+        <item>Medium (3-5 days/week)</item>
+        <item>High (6-7 days/week)</item>
+        <item>Very High (physical job or 7+ times/week)</item>
     </string-array>
 
 </resources>
