Minor GUI update fixed dailymealadapter not displaying correct weight_amount because multiplier was not functioning correctly fixed dailymealadapter not displaying correct macros when using multiplier other than 1 fixed main activity not making the correct macro adjustments when a dailymeal with a multiplier other than 1 is in the list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,7 +103,7 @@
         <item>Low (1-3 times/week)</item>
         <item>Medium (3-5 days/week)</item>
         <item>High (6-7 days/week)</item>
-        <item>Very High (physical job or 7+ times/week)</item>
+        <item>Very High (Physical job or 7+ times/week)</item>
     </string-array>
     <string name="title_activity_enter_saved_meal_amount">EnterSavedMealAmount</string>
 
