--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -105,7 +105,7 @@
         <item>High (6-7 days/week)</item>
         <item>Very High (Physical job or 7+ times/week)</item>
     </string-array>
-    <string name="title_activity_enter_saved_meal_amount">EnterSavedMealAmount</string>
+    <string name="title_activity_enter_saved_meal_quantity">EnterSavedMealQuantity</string>
     <string name="title_activity_select_meal_type">SelectMealTypeActivity</string>
     <string name="title_activity_create_simple_meal">CreateSimpleMealActivity</string>
 
