--- a/IIFYM_Tracker/src/main/res/values/strings.xml
+++ b/IIFYM_Tracker/src/main/res/values/strings.xml
@@ -110,5 +110,12 @@
     <string name="title_activity_create_simple_meal">CreateSimpleMealActivity</string>
     <string name="emailpassword_status_fmt">Email User: %s</string>
     <string name="firebase_status_fmt">Firebase User: %s</string>
+    <string name="male">Male</string>
+    <string name="_24_jan_2017">24-Jan-2017</string>
+    <string name="date_of_birth">Date of Birth</string>
+    <string name="female">Female</string>
+    <string name="imperial">Imperial</string>
+    <string name="metric">Metric</string>
+    <string name="name">Name</string>
 
 </resources>
