--- a/IIFYM_Tracker/src/main/res/values/strings.xml
+++ b/IIFYM_Tracker/src/main/res/values/strings.xml
@@ -110,8 +110,11 @@
     <string name="title_activity_create_simple_meal">CreateSimpleMealActivity</string>
     <string name="emailpassword_status_fmt">Email User: %s</string>
     <string name="firebase_status_fmt">Firebase User: %s</string>
+
+    <string name="app_subtitle">If It Fits Your Macros</string>
+
     <string name="male">Male</string>
-    <string name="_24_jan_2017">24-Jan-2017</string>
+    <string name="date_initial">01-Jan-2000</string>
     <string name="date_of_birth">Date of Birth</string>
     <string name="female">Female</string>
     <string name="imperial">Imperial</string>
