--- a/IIFYM_Tracker/src/main/res/values/strings.xml
+++ b/IIFYM_Tracker/src/main/res/values/strings.xml
@@ -1,36 +1,48 @@
 <resources>
-    <string name="app_name">IIFYM Tracker</string>
     <string name="action_settings">Settings</string>
     <string name="Macro_settings">Marco Settings</string>
     <string name="Meal_settings">Meal Settings</string>
     <string name="title_activity_settings">Settings</string>
 
-    <!-- Strings related to Settings -->
+    <!--activityLogin -->
+    <string name="appName">IIFYM Tracker</string>
+    <string name="appSubtitle">If It Fits Your Macros</string>
+    <string name="btnImNew">I\'m New!</string>
 
-    <!-- Example General settings -->
-    <string name="pref_header_general">General</string>
+    <!--activityUserInfo -->
+    <string name="userRegistration">User Registration</string>
+    <string name="name">Name</string>
+    <string name="dateOfBirth">Date of Birth</string>
+    <string name="dateInitial">01-Jan-2000</string>
+    <string name="gender">Gender</string>
+    <string name="male">Male</string>
+    <string name="female">Female</string>
+    <string name="unitSystem">Unit System</string>
+    <string name="imperial">Imperial</string>
+    <string name="metric">Metric</string>
+    <string name="weight">Weight</string>
+    <string name="kg">kg</string>
+    <string name="height">Height</string>
+    <string name="cm">cm</string>
+    <string name="workoutFrequency">Workout Frequency</string>
+    <string name="goals">Goals</string>
+    <string name="btnNext">Next</string>
 
-    <string name="pref_title_social_recommendations">Enable social recommendations</string>
-    <string name="pref_description_social_recommendations">Recommendations for people to contact
-        based on your message history
-    </string>
-
-    <string name="pref_title_display_name">Display name</string>
-    <string name="pref_default_display_name">John Smith</string>
-
-    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
-    <string-array name="pref_example_list_titles">
-        <item>Always</item>
-        <item>When possible</item>
-        <item>Never</item>
+    <string-array name="array_Goals">
+        <item>Fat Loss</item>
+        <item>Maintenance</item>
+        <item>Muscle Gain</item>
     </string-array>
-    <string-array name="pref_example_list_values">
-        <item>1</item>
-        <item>0</item>
-        <item>-1</item>
+
+    <string-array name="array_WorkoutFreq">
+        <item>None (little or no exercise)</item>
+        <item>Low (1-3 times/week)</item>
+        <item>Medium (3-5 days/week)</item>
+        <item>High (6-7 days/week)</item>
+        <item>Very High (physical job or 7+ times/week)</item>
     </string-array>
 
-    <!-- Example settings for Data & Sync -->
+<!--    &lt;!&ndash; Example settings for Data & Sync &ndash;&gt;
     <string name="pref_header_data_sync">Data &amp; sync</string>
 
     <string name="pref_title_sync_frequency">Sync frequency</string>
@@ -53,7 +65,7 @@
 
     <string name="pref_title_system_sync_settings">System sync settings</string>
 
-    <!-- Example settings for Notifications -->
+    &lt;!&ndash; Example settings for Notifications &ndash;&gt;
     <string name="pref_header_notifications">Notifications</string>
 
     <string name="pref_title_new_message_notifications">New message notifications</string>
@@ -65,7 +77,7 @@
     <string name="CarbPreferenceDefault">200</string>
     <string name="ProteinPreferenceDefault">100</string>
     <string name="FatPreferenceDefault">50</string>
-    <string name="macropreference_file_key">MacroPreferenceFile</string>
+    <string name="macropreference_file_key">MacroPreferenceFile</string>-->
 
 
     <!-- login fragments-->
@@ -99,26 +111,20 @@
     </string-array>
 
     <string-array name="workfreq_array">
-        <item>None (Little or no exercise)</item>
+        <item>None (little or no exercise)</item>
         <item>Low (1-3 times/week)</item>
         <item>Medium (3-5 days/week)</item>
         <item>High (6-7 days/week)</item>
-        <item>Very High (Physical job or 7+ times/week)</item>
+        <item>Very High (physical job or 7+ times/week)</item>
     </string-array>
+
     <string name="title_activity_enter_saved_meal_quantity">EnterSavedMealQuantity</string>
     <string name="title_activity_select_meal_type">SelectMealTypeActivity</string>
     <string name="title_activity_create_simple_meal">CreateSimpleMealActivity</string>
     <string name="emailpassword_status_fmt">Email User: %s</string>
     <string name="firebase_status_fmt">Firebase User: %s</string>
 
-    <string name="app_subtitle">If It Fits Your Macros</string>
-
-    <string name="male">Male</string>
-    <string name="date_initial">01-Jan-2000</string>
-    <string name="date_of_birth">Date of Birth</string>
-    <string name="female">Female</string>
-    <string name="imperial">Imperial</string>
-    <string name="metric">Metric</string>
-    <string name="name">Name</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
