--- a/IIFYM_Tracker/src/main/res/values/strings.xml
+++ b/IIFYM_Tracker/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="userRegistration">User Registration</string>
     <string name="firstname">Firstname</string>
     <string name="dateOfBirth">Date of Birth</string>
-    <string name="dateInitial">01-Jan-2000</string>
+    <string name="dateInitial">01-01-2000</string>
     <string name="gender">Gender</string>
     <string name="male">Male</string>
     <string name="female">Female</string>
