--- a/IIFYM_Tracker/src/main/res/values/strings.xml
+++ b/IIFYM_Tracker/src/main/res/values/strings.xml
@@ -29,9 +29,9 @@
     <string name="btnNext">Next</string>
 
     <string-array name="array_Goals">
-        <item>Fat Loss</item>
+        <item>Lose fat</item>
         <item>Maintenance</item>
-        <item>Muscle Gain</item>
+        <item>Gain muscle</item>
     </string-array>
 
     <string-array name="array_WorkoutFreq">
@@ -41,6 +41,14 @@
         <item>High (6-7 days/week)</item>
         <item>Very High (physical job or 7+ times/week)</item>
     </string-array>
+
+    <string name="userMacros_FeelFree">Feel free to change your macros to your liking!</string>
+    <string name="userMacros_MacroRecommendation">IIFYM recommends the following daily calorie and macronutrient intake</string>
+    <string name="Calories">Calories</string>
+    <string name="Carbs">Carbs</string>
+    <string name="Protein">Protein</string>
+    <string name="Fat">Fat</string>
+    <string name="btnFinish">Finish</string>
 
 <!--    &lt;!&ndash; Example settings for Data & Sync &ndash;&gt;
     <string name="pref_header_data_sync">Data &amp; sync</string>
