--- a/IIFYM_Tracker/src/main/res/values/strings.xml
+++ b/IIFYM_Tracker/src/main/res/values/strings.xml
@@ -50,42 +50,50 @@
     <string name="Fat">Fat</string>
     <string name="btnFinish">Finish</string>
 
-<!--    &lt;!&ndash; Example settings for Data & Sync &ndash;&gt;
-    <string name="pref_header_data_sync">Data &amp; sync</string>
+    <string name="kcal">kcal</string>
+    <string name="percent">%</string>
+    <string name="grams">g</string>
+    <string name="radioBtnGrams">Grams</string>
+    <string name="radioBtnPercent">Percent</string>
+    <string name="lblTotal">Total</string>
 
-    <string name="pref_title_sync_frequency">Sync frequency</string>
-    <string-array name="pref_sync_frequency_titles">
-        <item>15 minutes</item>
-        <item>30 minutes</item>
-        <item>1 hour</item>
-        <item>3 hours</item>
-        <item>6 hours</item>
-        <item>Never</item>
-    </string-array>
-    <string-array name="pref_sync_frequency_values">
-        <item>15</item>
-        <item>30</item>
-        <item>60</item>
-        <item>180</item>
-        <item>360</item>
-        <item>-1</item>
-    </string-array>
 
-    <string name="pref_title_system_sync_settings">System sync settings</string>
+    <!--    &lt;!&ndash; Example settings for Data & Sync &ndash;&gt;
+        <string name="pref_header_data_sync">Data &amp; sync</string>
 
-    &lt;!&ndash; Example settings for Notifications &ndash;&gt;
-    <string name="pref_header_notifications">Notifications</string>
+        <string name="pref_title_sync_frequency">Sync frequency</string>
+        <string-array name="pref_sync_frequency_titles">
+            <item>15 minutes</item>
+            <item>30 minutes</item>
+            <item>1 hour</item>
+            <item>3 hours</item>
+            <item>6 hours</item>
+            <item>Never</item>
+        </string-array>
+        <string-array name="pref_sync_frequency_values">
+            <item>15</item>
+            <item>30</item>
+            <item>60</item>
+            <item>180</item>
+            <item>360</item>
+            <item>-1</item>
+        </string-array>
 
-    <string name="pref_title_new_message_notifications">New message notifications</string>
+        <string name="pref_title_system_sync_settings">System sync settings</string>
 
-    <string name="pref_title_ringtone">Ringtone</string>
-    <string name="pref_ringtone_silent">Silent</string>
+        &lt;!&ndash; Example settings for Notifications &ndash;&gt;
+        <string name="pref_header_notifications">Notifications</string>
 
-    <string name="pref_title_vibrate">Vibrate</string>
-    <string name="CarbPreferenceDefault">200</string>
-    <string name="ProteinPreferenceDefault">100</string>
-    <string name="FatPreferenceDefault">50</string>
-    <string name="macropreference_file_key">MacroPreferenceFile</string>-->
+        <string name="pref_title_new_message_notifications">New message notifications</string>
+
+        <string name="pref_title_ringtone">Ringtone</string>
+        <string name="pref_ringtone_silent">Silent</string>
+
+        <string name="pref_title_vibrate">Vibrate</string>
+        <string name="CarbPreferenceDefault">200</string>
+        <string name="ProteinPreferenceDefault">100</string>
+        <string name="FatPreferenceDefault">50</string>
+        <string name="macropreference_file_key">MacroPreferenceFile</string>-->
 
 
     <!-- login fragments-->
@@ -119,10 +127,5 @@
     <string name="firebase_status_fmt">Firebase User: %s</string>
 
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="kcal">kcal</string>
-    <string name="percent">%</string>
-    <string name="grams">g</string>
-    <string name="radioBtnGrams">Grams</string>
-    <string name="radioBtnPercent">Percent</string>
 
 </resources>
