Worked on activityUserMacros

--- a/IIFYM_Tracker/src/main/res/values/strings.xml
+++ b/IIFYM_Tracker/src/main/res/values/strings.xml
@@ -42,8 +42,8 @@
         <item>Very High (physical job or 7+ times/week)</item>
     </string-array>
 
-    <string name="userMacros_FeelFree">Feel free to change your macros to your liking!</string>
-    <string name="userMacros_MacroRecommendation">IIFYM recommends the following daily calorie and macronutrient intake</string>
+    <string name="userMacros_FeelFree">Feel free to change your macros to your liking\n(But make sure they add up!)</string>
+    <string name="userMacros_MacroRecommendation">Beginners: IIFYM recommends the following guidelines for your body</string>
     <string name="Calories">Calories</string>
     <string name="Carbs">Carbs</string>
     <string name="Protein">Protein</string>
@@ -125,6 +125,8 @@
     <string name="title_activity_create_simple_meal">CreateSimpleMealActivity</string>
     <string name="emailpassword_status_fmt">Email User: %s</string>
     <string name="firebase_status_fmt">Firebase User: %s</string>
+    <string name="radioBtnCalories">Calories</string>
+    <string name="radioBtnMacros">Macros</string>
 
     <!-- TODO: Remove or change this placeholder text -->
 
