--- a/IIFYM_Tracker/src/main/res/values/strings.xml
+++ b/IIFYM_Tracker/src/main/res/values/strings.xml
@@ -144,15 +144,20 @@
     <string name="lblName">Name</string>
     <string name="lblPortionType">PortionType</string>
     <string name="lblPortionAmount">Portion Amount</string>
-    <string name="btnDelete">Delete from daily log?</string>
     <string name="lblSave">Save</string>
     <string name="lblC">c</string>
     <string name="lblp">p</string>
     <string name="lblf">f</string>
     <string name="lblkcal">kcal</string>
-    <string name="toolbarSelectItemToAdd">Select an item to add</string>
-
-
-    <!-- TODO: Remove or change this placeholder text -->
+    <string name="toolbarSelectItemToAdd">Select an item to add to daily log</string>
+    <string name="toolbarDatabaseManager">Database manager</string>
+    <string name="lblDeleteFromDaily">Delete from daily log?</string>
+    <string name="lblDeleteFromDatabase">Delete from database?</string>
+    <string name="toolbarCreateNewFood">Create new Food</string>
+    <string name="toolbarUserInfo">Register Yourself!</string>
+    <string name="toolbarUserMacros">Set your Daily Nutritional Goals</string>
+    <string name="toolbarEditFood">Edit food</string>
+    <string name="lblCreateNewMeal">Create New Meal</string>
+    <string name="lblDailyLog">Daily Log:</string>
 
 </resources>
