Changed menu items in acitivtyMain Renamed some files

--- a/IIFYM_Tracker/src/main/res/values/strings.xml
+++ b/IIFYM_Tracker/src/main/res/values/strings.xml
@@ -159,5 +159,10 @@
     <string name="toolbarEditFood">Edit food</string>
     <string name="lblCreateNewMeal">Create new meal</string>
     <string name="lblDailyLog">Daily Log:</string>
+    <string name="menuSettings">IIFYM Settings</string>
+    <string name="menuAccount">My Account</string>
+    <string name="menuLogout">Logout</string>
+    <string name="actionNutritionSettings">Nutrition Settings</string>
+    <string name="actionMyFood">My Food</string>
 
 </resources>
