Finished the java and xml for AddDailyItem

--- a/IIFYM_Tracker/src/main/res/values/strings.xml
+++ b/IIFYM_Tracker/src/main/res/values/strings.xml
@@ -164,5 +164,6 @@
     <string name="menuLogout">Logout</string>
     <string name="actionNutritionSettings">Nutrition Settings</string>
     <string name="actionMyFood">My Food</string>
+    <string name="toolbarAddDailyItem">Set Portion Amount</string>
 
 </resources>
