Gui polishing Removed all logs from project

--- a/IIFYM_Tracker/src/main/res/values/strings.xml
+++ b/IIFYM_Tracker/src/main/res/values/strings.xml
@@ -139,7 +139,7 @@
     <string name="hintProtein">Protein (g)</string>
     <string name="hintFat">Fat (g)</string>
     <string name="hintServing">Serving size</string>
-    <string name="hintAmount">Weight</string>
+    <string name="hintAmount">Amount</string>
     <string name="lblBrand">Brand</string>
     <string name="lblName">Name</string>
     <string name="lblPortionType">PortionType</string>
