--- a/IIFYM_Tracker/src/main/res/values/strings.xml
+++ b/IIFYM_Tracker/src/main/res/values/strings.xml
@@ -168,4 +168,7 @@
     <string name="menuProfile">Profile</string>
     <string name="lblFrequent">Frequent meals</string>
 
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
