--- a/IIFYM_Tracker/src/main/res/values/strings.xml
+++ b/IIFYM_Tracker/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="title_activity_settings">Settings</string>
 
     <!--activityLogin -->
-    <string name="appName">IIFYM Tracker</string>
+    <string name="appName">IIFYM</string>
     <string name="appSubtitle">If It Fits Your Macros</string>
 
     <!--activityUserInfo -->
