Renamed activityUserInfo to activityRegisterProfile Renamed activityUserMacros to activityRegisterGoals

--- a/IIFYM_Main/src/main/res/values/strings.xml
+++ b/IIFYM_Main/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="appName">IIFYM</string>
     <string name="appSubtitle">If It Fits Your Macros</string>
 
-    <!--activityUserInfo -->
+    <!--activityRegisterProfile -->
     <string name="userRegistration">User Registration</string>
     <string name="firstname">Firstname</string>
     <string name="dateOfBirth">Date of Birth</string>
