Added forgot password

--- a/IIFYM_Main/src/main/res/values/strings.xml
+++ b/IIFYM_Main/src/main/res/values/strings.xml
@@ -169,5 +169,6 @@
     <string name="lblFrequent">Frequent meals</string>
 
     <string name="lblComingSoon">Coming Soon!</string>
+    <string name="btnForgotPassword">Forgot Password</string>
 
 </resources>
