Minor database bug fix, correct nutrition info now shows in each fragment Added "Go to today" toolbar action Swiping between days is now completed.

--- a/IIFYM_Main/src/main/res/values/strings.xml
+++ b/IIFYM_Main/src/main/res/values/strings.xml
@@ -170,5 +170,6 @@
 
     <string name="lblComingSoon">Coming Soon!</string>
     <string name="btnForgotPassword">Forgot Password</string>
+    <string name="actionToday">Go to today</string>
 
 </resources>
