--- a/IIFYM/src/main/res/values/strings.xml
+++ b/IIFYM/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <!--activityLogin -->
     <string name="appName">IIFYM</string>
     <string name="appSubtitle">If It Fits Your Macros</string>
-    <string name="iifym_server_client_id">AIzaSyDo5dw34SP4KQVwCsBc5JNEFxBzn5-cDjY</string>
+    <string name="iifym_server_client_id">930699920107-vd13bav441l7d5vlr6v3onf0b3r5htme.apps.googleusercontent.com</string>
 
     <!--activityRegisterProfile -->
     <string name="userRegistration">User Registration</string>
