Finished activityCreateMeal logic Still need to test it though Started working on activitySelectMealIngredients logic

--- a/IIFYM/src/main/res/values/strings.xml
+++ b/IIFYM/src/main/res/values/strings.xml
@@ -174,5 +174,6 @@
     <string name="btnOk">Ok</string>
 
     <string name="lblSelectedFoods"><u>Selected Foods</u></string>
+    <string name="toolbarCreateNewMeal">Create new meal</string>
 
 </resources>
