Finished activityCreateMeal logic Still need to test it though Started working on activitySelectMealIngredients logic Created AdapterIngredients

--- a/IIFYM/src/main/res/values/strings.xml
+++ b/IIFYM/src/main/res/values/strings.xml
@@ -175,5 +175,6 @@
 
     <string name="lblSelectedFoods"><u>Selected Foods</u></string>
     <string name="toolbarCreateNewMeal">Create new meal</string>
+    <string name="lblMealIngredients">Meal Ingredients</string>
 
 </resources>
