Bug Fix: Meal add up of foods inaccurate

--- a/IIFYM/src/main/res/values/strings.xml
+++ b/IIFYM/src/main/res/values/strings.xml
@@ -175,7 +175,7 @@
     <string name="btnOk">Ok</string>
     <string name="btnCancel">Cancel</string>
 
-    <string name="lblSelectedFoods"><u>Selected Foods</u></string>
+    <string name="lblSelectedFoods">Selected Foods</string>
     <string name="toolbarCreateNewMeal">Create new meal</string>
     <string name="lblMealIngredients">Meal Ingredients</string>
 
