Added listview to show Meal Ingredient in activityAddDailyItem Added activityAbout with links to contact info, portfolio website, github repo and privacy policy Minor GUI improvements

--- a/IIFYM/src/main/res/values/strings.xml
+++ b/IIFYM/src/main/res/values/strings.xml
@@ -179,5 +179,7 @@
     <string name="lblSelectedFoods">Selected Foods</string>
     <string name="toolbarCreateNewMeal">Create new meal</string>
     <string name="lblMealIngredients">Meal Ingredients</string>
+    <string name="lblKarimEmail">karimchehab94@gmail.com</string>
+    <string name="lblKarimWebsite">karim-chehab.weebly.com</string>
 
 </resources>
